--- a/apps/keyWords/view/Keyword/list.html
+++ b/apps/keyWords/view/Keyword/list.html
@@ -6,7 +6,9 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="renderer" content="webkit">
 <meta name="viewport" content="width=device-width,initial-scale=1">
+{if isset($subKeyWords)}
 <meta name="keywords" content="{$subKeyWords}">
+{/if}
 <meta name="description" content="更懂你的实时优惠播报站-让优惠触手可及">
 <title>{$keyWord}_{$subtitle}</title>
 <link rel="dns-prefetch" href="{$host}">
@@ -33,10 +35,12 @@
 						<a class="result-nav-tab" tab="2" href="javascript:void(0);"
 							link="/assets/result.html?tab=2" _hover-ignore="1">白菜价</a>
 					</ul>
+					{if isset($count)}
 					<div class="recommend-category-update pull-right">
 						为您找到<span id="R-search-keywords" class="font-weight"></span>的搜索结果，共<span
 							id="R-search-num" class="font-weight">{$count}</span>条
 					</div>
+					{/if}
 					<div class="clearfix"></div>
 				</div>
 			</div>
