--- a/apps/tryOut/view/articlecontroller/item.html
+++ b/apps/tryOut/view/articlecontroller/item.html
@@ -230,18 +230,7 @@ var item={$item.item.tryItemId|urlIdcode=###,true};
 				</div>
 				<div class="d-bottom-right">
 					<div class="feature-sidebar">
-						<div class="feature-hot temai-section-top-color mb-20">
-							<div class="feature-hot-title font-title-16 pl-10">热门推荐</div>
-							<ul class="feature-hot-items" id="D-temai">
-							</ul>
-						</div>
-						<div class="feedback-section feedback-section-top-color"
-							id="M-feedback">
-							<div class="feedback-p1">问题反馈QQ群：529334319</div>
-							<a class="feedback-p2" target="_blank"
-								href="https://shang.qq.com/wpa/qunwpa?idkey=820ecd80532576e4e0e4ba4a2d3caf260f0c2272402d07a35dd042c413d296bd"
-								_hover-ignore="1">加入反馈</a>
-						</div>
+						{include file="../../public/advertisement" /}
 					</div>
 				</div>
 				<div class="fnClear"></div>
