--- a/apps/buyinventory/view/buyinventory/item.html
+++ b/apps/buyinventory/view/buyinventory/item.html
@@ -6,22 +6,17 @@
 <meta http-equiv="X-UA-Compatible" content="IE=Edge">
 <meta name="renderer" content="webkit">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<meta name="keywords"
-	content="{if isset($itemKeyWords) && !empty($itemKeyWords)}{$itemKeyWords}{/if}">
-<meta name="description"
-	content="欢迎来到好券vip领取{$item.title|strip_tags=###}的优惠券,此宝贝原价{$item.zkFinalPriceWap}，券后价{$item.zkFinalPriceWap-$item.couponAmount/100}元,最近30天销量{if
-									$item.biz30Day>9999}{$item.biz30Day/10000|round=###,2}万{else}{$item.biz30Day}{/if}件。好券vip,更多淘宝优惠券任你领取。">
-<title>{$item.title|strip_tags=###}_{$subtitle}</title>
+
+<meta name="description" content="{if isset($description)}{$description}{/if}">
+<title>{$title}_{$body.subTitle}_{$subtitle}</title>
+<meta name="keywords" content="{if isset($keyWords)}{$keyWords}{/if}">
 <link rel="dns-prefetch" href="{$host}">
 <link rel="stylesheet" href="/public/static/css/base.css">
-<link rel="stylesheet" href="/public/static/css/item.css">
-<link rel="stylesheet" href="/public/static/css/article_list.css">
+<link rel="stylesheet" href="/public/static/css/tryout.css">
 <script src="/public/static/js/jquery-3.2.1.min.js"></script>
 <script src="/public/static/js/item.js"></script>
 </head>
-<script>
-var item={$item.itemId|urlIdcode=###,true};
-</script>
+
 <body>
 	<div class="container">
 		<!--[if lte IE 7 ]>
@@ -35,60 +30,44 @@ var item={$item.itemId|urlIdcode=###,true};
 					<div class="d-top-layer">
 						<div class="crumbs-items pull-left" id="M-crumbs">
 							<a class="crumbs-item crumbs-item-0" href="/"><span>当前位置：</span><span
-								class="crumbs-item-title">全部推荐</span></a> <a
-								class="crumbs-item crumbs-item-1"
-								href="/goods/{$cate['id']}_1.html" target="_blank">&nbsp;&nbsp;&gt;&nbsp;&nbsp;<span
-								class="crumbs-item-title">{$cate['keyword']}</span></a>
+								class="crumbs-item-title">全部试用</span></a> <a
+								class="crumbs-item crumbs-item-1" href="/try/{$cate.id}_1.html"
+								target="_blank">&nbsp;&nbsp;&gt;&nbsp;&nbsp;<span
+								class="crumbs-item-title">{$cate.cate_name}</span></a>
 						</div>
-						<div class="d-top-layer-property pull-right">
-							<span class="mr-20">来源:{if
-								$item.userType==0}淘宝{else}天猫{/if}</span> <span class="mr-20">更新时间:{$item.update_time|date="Y-m-d",###}</span>
-							<span>浏览1次</span>
-						</div>
+
 					</div>
 					<div class="d-top-content">
 						<div class="d-top-content-left item">
 							<div class="d-large-thumbnail">
-								<img src="{$taobao_img_url}{$item.pictUrl}">
+								<img src="{$taobao_img_url}tfscom/{$item.item.picUrl}">
 							</div>
 
 						</div>
 						<div class="d-top-content-right">
-							<div class="d-goods-title" _hover-ignore="1">{$item.title|strip_tags=###}</div>
+							<div class="d-goods-title">{$item.item.title}</div>
 							<div class="d-goods-price">
-								<span
-									class="item-promotion-orgprice d-goods-price-origin mr-10 nowprice">现价:{$item.zkFinalPriceWap}元</span>
-								<span class=" d-goods-price-now mr-10 sold">已售:{if
-									$item.biz30Day>9999}{$item.biz30Day/10000|round=###,2}万{else}{$item.biz30Day}{/if}件</span>
+								<span class="d-goods-price-origin mr-10 nowprice">现价:{$item.item.price}元</span>
+							</div>
+							<div class="d-goods-price">
+								<span class=" d-goods-price-now mr-10 sold">试用时间:{$item.submitTime/1000|date="Y-m-d",###}</span>
+							</div>
+							<div class="d-goods-price">
+								<span class=" d-goods-price-now mr-10 sold">卖家:{$item.user.nick}</span>
+							</div>
+							<div class="d-goods-price">
+								<span class="d-goods-price-now mr-10 sold">试用情况:{foreach
+									$item.score as $vo}{$vo.label}:{$vo.value}分;{/foreach}</span>
+							</div>
+							<div class="d-goods-price">
+								<span class="d-goods-price-now mr-10 sold">{foreach
+									$item.personal as $vo}{$vo.label}:{$vo.value};{/foreach}</span>
 
-							</div>
 
-
-							<div class="d-goods-price">
-								<span class=" d-goods-price-now mr-10 sold">优惠券总数:{$item.couponTotalCount}</span>
-								<span class=" d-goods-price-now mr-10 sold">已领取:{$item.couponSendCount}</span>
-							</div>
-							<div class="d-goods-price">
-								<span class=" d-goods-price-now mr-10 sold">卖家:{$item.nick}</span>
-							</div>
-							<div class="d-goods-price">
-								<span class="d-goods-price-now mr-10 sold">优惠券使用时间:{$item.couponEffectiveStartTime|date="Y-m-d",###}~{$item.couponEffectiveEndTime|date="Y-m-d",###}</span>
-							</div>
-							<div class="d-goods-price">
-								<span class="item-promotion-thisprice d-goods-price-now mr-10">券后价:{$item.zkFinalPriceWap-$item.couponAmount/100}元</span>
-								<div class="coupon-amount-icon p-top">
-									<div class="icon-left">券</div>
-									<span>{$item.couponAmount/100 }元</span>
-								</div>
-								{if $discount<10} <span
-									class="item-promotion-thisprice d-goods-price-now mr-10"
-									style="margin-left: 10px">{$discount}折</span> {/if}
 
 							</div>
 
 							<a class="d-goods-redirect-link item" target="_blank"
-								isconvert="1">领取内部优惠券</a> <a
-								class="d-goods-redirect-link-2 item" target="_blank"
 								isconvert="1">直达商品链接</a>
 
 							<div class="statement">
@@ -103,58 +82,63 @@ var item={$item.itemId|urlIdcode=###,true};
 			</div>
 			<div class="d-bottom">
 				<div class="d-bottom-left">
-					
-					{if isset($reasonData) && !empty($reasonData) &&
-							isset($reasonData.count) && !empty($reasonData.count) }
-					
 					<div
 						class="d-recommend-reason today-section-top-color color-bg-white">
 						<div class="d-recommend-reason-title border-bottom-e5">
-							<div class="section-title pull-left">推荐理由</div>
+							<div class="section-title pull-left">{$body.title}</div>
+							<div class="clearfix"></div>
+						</div>
+						
+						
+						{foreach $body.richText as $vo}
+
+						<div class="d-recommend-reason-title border-bottom-e5">
+							<div class="section-title pull-left">亮点与细节</div>
 							<div class="clearfix"></div>
 						</div>
 						<div class="d-recommend-reason-content">
-							<div class="line1">{if isset($reason)}{$reason}{/if}</div>
 
-							
-							<div class="line2">
-								该商品共{$reasonData.count.total}个评价， 好评率：{$PraiseRate}%，
-								其中好评{$reasonData.count.good}， 中评{$reasonData.count.normal}，
-								差评{$reasonData.count.bad}，
-								追评{$reasonData.count.additional}，图片{$reasonData.count.pic} <span
-									class="line-href item">查看全部&gt;</span>
+							{if condition="isset($item.highlight) &&
+							is_array($item.highlight) && count($item.highlight)>0"} {foreach
+							$item.highlight as $vo}
+							<div class="content">{$vo.content}</div>
+							<div class="item">
+								<img src="{$vo.pic}" />
 							</div>
-							
+							{/foreach}{/if}
 						</div>
+
+
+						
 					</div>
-					{/if}
+
 					{if condition="isset($commentData) && is_array($commentData) &&
 					count($commentData)>0"}
 					<div
 						class="d-comment color-bg-white mt-15 featurenums-section-top-color">
 						<div class="d-comment-title border-bottom-e5">
 							<div class="section-title pull-left">图文评价</div>
-							<span class="section-more pull-right item">更多评价&gt;</span>
+							<a class="section-more pull-right item" target="_blank"
+								isconvert="1">更多评价&gt;</a>
 							<div class="clearfix"></div>
 						</div>
 
-						<div class="d-comment-items">
-							
-							{foreach $commentData.data as $vo}
-							
 
+						{foreach $commentData.data as $vo}
+
+						<div class="d-comment-items">
 							<div class="d-comment-item">
 								<div class="d-comment-item-top">
 									<div class="d-comment-nickname pull-left">{$vo.displayUserNick}</div>
 									<div class="d-comment-time pull-left">{$vo.rateDate}</div>
-									<div class="d-comment-type pull-left">{$vo.auctionSku}</div>
+									<div class="d-comment-time pull-left">{$vo.auctionSku}</div>
 								</div>
 								<div class="d-comment-content">{$vo.rateContent}</div>
 								{if isset($vo.pics) && is_array($vo.pics) && count($vo.pics)>0}
 								<div class="d-comment-pictures">
 									<ul class="d-comment-pictures-items">
 										{foreach $vo.pics as $pic}
-										<li><img class="item" src="{$taobao_img_url}{$pic}_50x50"
+										<li><img src="{$taobao_img_url}{$pic}_50x50"
 											large-src="{$taobao_img_url}{$pic}_50x50">
 											<div class="d-comment-pictures-items-arrow-down"></div></li>
 										{/foreach}
@@ -165,11 +149,13 @@ var item={$item.itemId|urlIdcode=###,true};
 
 								{/if}
 							</div>
-
-							{/foreach}
 						</div>
+						{/foreach}
+
 					</div>
-					{/if} 
+					{/if}
+
+
 					{if condition="isset($askeverybodyList) &&
 					is_array($askeverybodyList) && count($askeverybodyList)>0"}
 					<link rel="stylesheet" href="/public/static/css/askeverybody.css">
@@ -239,90 +225,8 @@ var item={$item.itemId|urlIdcode=###,true};
 
 				</div>
 				<div class="d-bottom-right">
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-					<div class="feature-sidebar">
-
-
-						{if isset($randTryList) && is_array($randTryList) &&
-						count($randTryList)>0}
-						<div class="rec-tuijian" style="margin-top: 0px">
-							<div class="tuijian-tl">
-								<ul>
-									<li class="cur" index="0"><a href="javascript:;">最新推荐</a><i
-										class="xia-icon"></i></li>
-
-								</ul>
-							</div>
-							<div class="tuijian-txt">
-								<ul class="r-tops">
-									{volist name="randTryList" id="vo" } {if $i==1}
-									<div class="top-ranks">
-										<a title="{$vo.data.item.title}" href="/try/{$vo.id}.html"
-											target="_blank"><img
-											src="{$taobao_img_url}tfscom/{$vo.data.item.picUrl}{$img_size.small}"><span
-											class="rank-cons"><b>{$vo.data.item.title|chinesesubstr=###,0,36}</b>
-												<p>{$vo.introduction|chinesesubstr=###,0,350}</p></span></a>
-									</div>
-									{else /}
-									<li><a title="{$vo.data.item.title}"
-										href="/try/{$vo.id}.html" target="_blank">{$vo.data.item.title|chinesesubstr=###,0,36}</a></li>
-									{/if} {/volist}
-								</ul>
-							</div>
-
-						</div>
-						{/if} {if isset($randGoodsList) && is_array($randGoodsList) &&
-						count($randGoodsList)>0}
-
-						<div class="rec-tuijian">
-							<div class="tuijian-tl">
-								<ul>
-									<li class="cur" index="0"><a href="javascript:;">精彩推荐</a><i
-										class="xia-icon"></i></li>
-
-								</ul>
-							</div>
-							<div class="tuijian-txt">
-								<ul class="r-tops">
-									{volist name="randGoodsList" id="vo" } {if $i==1}
-									<div class="top-ranks">
-										<a title="{$vo.title}"
-											href="/goods/{$vo.itemId|urlIdcode=###,true}.html"
-											target="_blank"><img
-											src="{$taobao_img_url}{$vo.pictUrl}{$img_size.small}"><span
-											class="rank-cons"><b>{$vo.title|strip_tags=###|chinesesubstr=###,0,36}</b>
-												<p>{$vo.reason|chinesesubstr=###,0,350}</p></span></a>
-									</div>
-									{else /}
-									<li><a title="{$vo.title}"
-										href="/goods/{$vo.itemId|urlIdcode=###,true}.html"
-										target="_blank">{$vo.title|strip_tags=###|chinesesubstr=###,0,36}</a></li>
-									{/if} {/volist}
-								</ul>
-							</div>
-
-						</div>
-						{/if}
-
-
-						{include file="../../public/advertisement" /}
-					</div>
+					<div class="feature-sidebar">{include
+						file="../../public/advertisement" /}</div>
 				</div>
 				<div class="fnClear"></div>
 			</div>
