--- a/apps/buyinventory/view/buyinventory/list.html
+++ b/apps/buyinventory/view/buyinventory/list.html
@@ -58,7 +58,7 @@
 							{if is_array($list)}
 								{foreach $list as $vo}
 
-								<div class="feature-items-tr item" itemId="{$vo.nid|urlIdcode=###,true}">
+								<div class="feature-items-tr item">
 									<div class="feature-items-td" index="0">
 										{if isset($isDetails) && $isDetails}
 										<a target="_blank"
